# ai_reacting_flows

./: .gitignore  COPYRIGHT  README.md  README_PYTORCH.txt  enviro_pytorch.txt  enviro_tensorflow.txt  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml
ai_reacting_flows/ann_model_generation/: Custom_layers.py  MLP_model.py  MLP_model_pytorch.py  NN_manager.py  NN_models.py  NN_testing.py  cantera_runs.py  model_testing.py  tensorflow_custom.py
ai_reacting_flows/stochastic_reactors_data_gen/: ann_model.py  database_processing.py  main.py  particle.py  particles_cloud.py  post_processing.py
ai_reacting_flows/tools/: utilities.py
articles/: README.md
articles/PoF_2023/: README.md  ann_model_learning.py  ann_model_testing.py  dtb_params.yaml  dtb_processing.py  dtb_processing.yaml  generate_inlets_file.py  generate_stoch_dtb.py  networks_params.yaml
notebooks/: analyze_ML_dtb.ipynb  analyze_ML_dtb.py  ann_model_learning.ipynb  ann_model_learning.py  ann_model_testing.ipynb  ann_model_testing.py  generate_ML_dtb.ipynb  generate_ML_dtb.py  generate_inlets_file.ipynb  generate_inlets_file.py  post_processing_stoch_reac.ipynb  post_processing_stoch_reac.py
scripts/: Convert_Pytorch_pkl.py  Convert_pkl_tensorflow.py  ann_model_learning.py  ann_model_testing.py  generate_stoch_dtb.py
tests/: 01_stoch_dtb_test.py  02_dtb_preprocessing_test.py  03_stoch_dtb_dtvar_test.py  04_dtb_learning_data_test.py  05_pt_to_keras_test.py  CURL_rate_list.pkl  DummyComm.py  inlets_file.xlsx  misc.py  pairs_list.pkl  stoch_dtb_test.py
(+129 files in other folders)
