[project]
name = "ai_reacting_flow"
version = "1.0.0"
authors = [
    { name = "cmehl" },
    { name = "aubagnacd" }
]
maintainers = [
    { name = "cmehl" },
    { name = "aubagnacd" }
]
description = "DESCRIPTION"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest >= 8.0.1",
    "Cantera == 3.0.1",
    "matplotlib>=3.5.3",
    "scikit-learn>=1.1.2",
    "seaborn>=0.11.2",
    "pandas>=1.4.4",
    "mpi4py>=3.1.3",
    "ipykernel>=6.15.2",
    "openpyxl",
    "jupytext",
    "tensorflow>=2.9.1",
    "torch>=2.6.0",
    "torchinfo",
    "oyaml"
]